# autotests-playwright-examples-python

./: .gitignore  README.md  pyproject.toml
autotests/: conftest.py
autotests/data/: data.py
autotests/pages/: task_base.py
autotests/pages/auth/: locators.py  tasks.py
autotests/pages/main_page/: locators.py  tasks.py
autotests/tests/: test_login_page.py  test_main_page.py
autotests/tools/: logger.py  report.py
report/: index.html
report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
report/data/test-cases/: 657ea3b8942e0229.json  c59be0c736c048b6.json
report/export/: influxDbData.txt  prometheusData.txt
report/history/: history.json
report/widgets/: behaviors.json  duration-trend.json  duration.json  suites.json  summary.json
results/: 043a0eaa-97d1-44b0-b5e8-2bcc95047f28-result.json  36f40fdf-94fe-463f-a136-3dd609054274-container.json  51210ffc-3cab-4a56-88c9-b48b01c5a1bb-container.json  63fd0a47-1b11-4acd-bb19-d4eeb93186c5-container.json  6deff877-f9f6-4042-92ca-1de16be124e2-container.json  89e71127-2fc5-4748-af27-5a5148e232db-result.json  90123e18-8163-4103-8d88-44c46eef4b7e-container.json  902e4cb4-4fce-4014-b9d1-cecb5c942252-container.json  96c0849e-c6e0-42c8-8dfe-3425085e0c14-container.json  d9c44134-90ac-44b3-9bf8-5d04884116dd-result.json  e5354854-46af-402b-af5a-b3176701ff1c-container.json  f483b30b-f76b-48d6-8855-75c88746fc05-container.json
